# muzik-old

./: .gitattributes  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: codecov.yaml
muzik_cli/: Cargo.toml
muzik_common/: Cargo.toml
muzik_common/src/: audio_file_name.rs  config.rs  data.rs  database.rs  lib.rs  tags.rs  util.rs
muzik_common/src/entities/: album.rs  artist.rs  genre.rs  mod.rs  prelude.rs  song.rs  song_artist_junction.rs  song_genre_junction.rs  song_youtube_playlist_id_junction.rs  youtube_playlist_id.rs
muzik_common/src/migrator/: m20230601_000001_create_basic_table.rs  m20230601_000002_create_junction_tables.rs  m20230826_000003_alter_song_table_add_path.rs  mod.rs
muzik_gui/: Cargo.toml
muzik_gui/src/: config.rs  editor.rs  gui.rs  hoverable.rs  log.rs  main.rs  theme.rs
muzik_gui/src/gui/: downloader.rs  editor.rs  hoverable.rs  mod.rs  multi_input.rs  theme.rs
muzik_tui/: Cargo.toml
muzik_tui/src/: config.rs  download.rs  editor.rs  event_runner.rs  main.rs  metadata.rs  theme.toml  tui.rs
src/: config.rs  database.rs  kid3.rs  main.rs  tags.rs  util.rs
src/entities/: album.rs  artist.rs  genre.rs  prelude.rs  song.rs  song_album_junction.rs  youtube_playlist_id.rs
src/gui/: data.rs  editor.rs  hoverable.rs  mod.rs  multi_input.rs
src/migrator/: m20230601_000001_create_basic_table.rs  m20230826_000003_alter_song_table_add_path.rs  mod.rs
src/tui/: download.rs  editor.rs  event_runner.rs  metadata.rs  mod.rs  theme.toml
