[package]
name = "muzik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
youtube_dl = {path = "../youtube-dl-rs", default-features = false , features = ["tokio", "yt-dlp"]}
tokio = {version = "1", features= ["full"]}
clap = {version = "4", features = ["derive"]}
dialoguer = {version = "0.10.2", features=["fuzzy-select"]}
sanitize-filename = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features =["env-filter", "fmt",  "time"]}
image = "0.24"
reqwest = {version = "0.11" ,features = ["blocking"]}
directories-next = "2"
rusqlite = {version = "0.28", features = ["bundled"]}
lofty = {git = "https://github.com/Serial-ATA/lofty-rs", branch = "ogg-corruption"}
iced = "0.6"
cursive = {version = "0.20", default-features = false, features = ["crossterm-backend", "toml"]}
cursive-tabs = "^0"
send_wrapper = "0.6.0"
tempfile = "3"
tracing-appender = "0.2"
