# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver = "2"
members = ["muzik_common", "muzik_tui", "muzik_gui", "muzik_cli"]

[workspace.package]
version = "0.1.0"
authors = ["Luqmanul Hakim <luqmanulhakim1720@gmail.com>"]
edition = "2021"
