[package]
name = "muzik_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "muzik-cli"
path = "src/main.rs"

[dependencies]
muzik_common = { path = "../muzik_common" }
eyre = "0.6"
youtube_dl = { version = "0.8", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.10", features = ["fuzzy-select", "completion"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
directories = "5"
lofty = { version = "0.15" }
tempfile = "3"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "^0"
async-trait = "0.1"
crossbeam-channel = "0.5"
walkdir = "2"
mime_guess = "2"
