[package]
name = "muzik_common"
version = "0.1.0"
edition = "2021"

[dependencies]
miette = { version = "5" }

sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "^0"
youtube_dl = { version = "0.8", default-features = false, features = ["tokio"] }
lofty = "0.15"
image = "0.24"
reqwest = "0.11"
tracing = "0.1"
eyre = "0.6"
walkdir = "2"
mime_guess = "2"
[dev-dependencies]
tokio = { version = "1" }
