[package]
name = "muzik_common"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
miette = { version = "5" }
thiserror = { version = "1" }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "^0"
youtube_dl = { version = "0.9", default-features = false, features = ["tokio"] }
lofty = "0.15"
image = "0.24"
reqwest = "0.11"
tracing = "0.1"
walkdir = "2"
mime_guess = "2"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1" }
