[package]
name = "muzik_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "muzik-gui"
path = "src/main.rs"

[dependencies]
muzik_common = { path = "../muzik_common" }
crossbeam-channel = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
miette = { version = "5", features = ["fancy"] }
etcetera = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
cosmic-text = { git = "https://github.com/pop-os/cosmic-text" }
iced = { version = "0.10", features = ["tokio", "image", "advanced"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw.git", rev = "fe2080080948f2ba51b6a442f0328a62dc59d662", features = [
    "split",
    "tabs",
    "modal",
    "card",
] }
image = { version = "^0" }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
toml = { version = "0.8" }
tracing-appender = { version = "0.2" }
