[package]
name = "muzik_tui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
muzik_common = { path = "../muzik_common" }
eyre = "0.6"
youtube_dl = { version = "0.8", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }
image = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
directories = "5"
lofty = { version = "0.15" }
cursive = { version = "0.20", default-features = false, features = [
    "crossterm-backend",
    "toml",
] }
cursive-tabs = "^0"
tracing-appender = "0.2"
toml = "0.7"
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "^0"
async-trait = "0.1"
crossbeam-channel = "0.5"
walkdir = "2"
mime_guess = "2"
